browser-sync working

--- a/sass/global.scss
+++ b/sass/global.scss
@@ -25,6 +25,7 @@ body {
       }
       h3 {
         margin: 0 0 15px;
+        // color: red;
         }
       .circle--avatar {
         float: left;
